Fix gear selector appearing behind other elements

--- a/style.css
+++ b/style.css
@@ -504,6 +504,7 @@ input.tab:active + label {
     left: 20px;
     top: 20px;
     box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.25);
+    z-index: 100;
 }
 
 .gear-selector input[type=text] {
